[gd_scene load_steps=17 format=3 uid="uid://bfnjvm15np73b"]

[ext_resource type="Script" uid="uid://dlvuws5hd3rjn" path="res://spaceship/kat3/kat3.gd" id="1_o6jdi"]
[ext_resource type="Texture2D" uid="uid://0cogjkstsnpq" path="res://spaceship/kat3/space-kat3.svg" id="1_tr7ph"]
[ext_resource type="Texture2D" uid="uid://b4sakgfaamak3" path="res://assrt/img/engine/tail_flame.svg" id="3_k5p44"]
[ext_resource type="Texture2D" uid="uid://cw8ch5rlff0o5" path="res://assrt/img/engine/smoke.svg" id="4_olhc1"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_olhc1"]
resource_local_to_scene = true
polygon = PackedVector2Array(-197, -91, -197, 95, 264, 94, 261, -64, 147, -89, 150, 65, 42, 64, 41, -90)

[sub_resource type="VisualShaderNodeColorOp" id="VisualShaderNodeColorOp_olhc1"]
output_port_for_preview = 0
operator = 7

[sub_resource type="VisualShaderNodeColorConstant" id="VisualShaderNodeColorConstant_uj7id"]
output_port_for_preview = 0
constant = Color(0, 50, 50, 1)

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_te46u"]
output_port_for_preview = 0
input_name = "color"

[sub_resource type="VisualShader" id="VisualShader_aexjk"]
code = "shader_type canvas_item;
render_mode blend_mix;




void fragment() {
// Input:5
	vec4 n_out5p0 = COLOR;


// ColorConstant:4
	vec4 n_out4p0 = vec4(0.000000, 50.000000, 50.000000, 1.000000);


	vec3 n_out3p0;
// ColorOp:3
	{
		float base = vec3(n_out5p0.xyz).x;
		float blend = vec3(n_out4p0.xyz).x;
		if (base < 0.5) {
			n_out3p0.x = (base * (blend + 0.5));
		} else {
			n_out3p0.x = (1.0 - (1.0 - base) * (1.0 - (blend - 0.5)));
		}
	}
	{
		float base = vec3(n_out5p0.xyz).y;
		float blend = vec3(n_out4p0.xyz).y;
		if (base < 0.5) {
			n_out3p0.y = (base * (blend + 0.5));
		} else {
			n_out3p0.y = (1.0 - (1.0 - base) * (1.0 - (blend - 0.5)));
		}
	}
	{
		float base = vec3(n_out5p0.xyz).z;
		float blend = vec3(n_out4p0.xyz).z;
		if (base < 0.5) {
			n_out3p0.z = (base * (blend + 0.5));
		} else {
			n_out3p0.z = (1.0 - (1.0 - base) * (1.0 - (blend - 0.5)));
		}
	}


// Output:0
	COLOR.rgb = n_out3p0;


}
"
mode = 1
flags/light_only = false
nodes/fragment/3/node = SubResource("VisualShaderNodeColorOp_olhc1")
nodes/fragment/3/position = Vector2(0, 160)
nodes/fragment/4/node = SubResource("VisualShaderNodeColorConstant_uj7id")
nodes/fragment/4/position = Vector2(-360, 400)
nodes/fragment/5/node = SubResource("VisualShaderNodeInput_te46u")
nodes/fragment/5/position = Vector2(-380, 100)
nodes/fragment/connections = PackedInt32Array(4, 0, 3, 1, 3, 0, 0, 0, 5, 0, 3, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uhln1"]
shader = SubResource("VisualShader_aexjk")

[sub_resource type="Curve" id="Curve_olhc1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_uhln1"]
curve = SubResource("Curve_olhc1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rtcpa"]
resource_local_to_scene = true
lifetime_randomness = 0.5
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
emission_shape_scale = Vector3(1, 1, 0)
emission_shape = 3
emission_box_extents = Vector3(1, 50, 1)
inherit_velocity_ratio = 0.5
direction = Vector3(-1, 0, 0)
spread = 1.0
flatness = 1.0
initial_velocity_min = 20.0
initial_velocity_max = 5000.0
gravity = Vector3(0, 0, 0)
scale_max = 2.0
scale_curve = SubResource("CurveTexture_uhln1")
color = Color(0, 0.517676, 0.858109, 1)
collision_mode = 2
collision_use_scale = true

[sub_resource type="Curve" id="Curve_uj7id"]
_data = [Vector2(0, 0.629214), 0.0, 0.0, 0, 0, Vector2(0.279412, 1), 1.78277, 1.78277, 0, 0, Vector2(0.977941, 0.404494), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_te46u"]
curve = SubResource("Curve_uj7id")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rbtdf"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
emission_shape = 3
emission_box_extents = Vector3(0, 50, 0)
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 100.0
initial_velocity_max = 150.0
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_te46u")
collision_mode = 1
collision_friction = 0.1
collision_bounce = 0.5
collision_use_scale = true

[node name="spaceship" type="CharacterBody2D"]
disable_mode = 2
motion_mode = 1
floor_stop_on_slope = false
floor_constant_speed = true
floor_block_on_wall = false
script = ExtResource("1_o6jdi")
speed = 5e+06

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_tr7ph")

[node name="cp" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(266, 92, 263, -65, 254, -65, 254, 40, 148, 40, 151, -88, 142, -87, 140, 54, 44, 55, 41, -85, -256, -88, -260, 97)

[node name="area" type="Area2D" parent="."]

[node name="cp" type="CollisionPolygon2D" parent="area"]
polygon = PackedVector2Array(253, 39, 148, 39, 150, -84, 254, -60)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_olhc1")

[node name="GPUParticles-1" type="GPUParticles2D" parent="."]
light_mask = 512
material = SubResource("ShaderMaterial_uhln1")
position = Vector2(-243, -19)
emitting = false
amount = 100
texture = ExtResource("3_k5p44")
lifetime = 2.0
explosiveness = 0.2
fixed_fps = 120
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_rtcpa")

[node name="GPUParticles-2" type="GPUParticles2D" parent="."]
light_mask = 512
position = Vector2(-265, -14)
emitting = false
amount = 100
texture = ExtResource("4_olhc1")
lifetime = 10.0
fixed_fps = 180
trail_lifetime = 0.2
trail_sections = 10
trail_section_subdivisions = 10
process_material = SubResource("ParticleProcessMaterial_rbtdf")

[node name="back_door" type="CollisionPolygon2D" parent="."]
position = Vector2(95, -84)
polygon = PackedVector2Array(-59, -5, -60, 149, -48, 150, -50, 3, 47, 3, 46, 148, 53, 148, 54, -9)

[connection signal="area_entered" from="area" to="." method="_on_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_exited"]
